--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Flask CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # triggers on push to main branch
+      - main
 
 jobs:
   build-and-deploy:
@@ -31,9 +31,7 @@ jobs:
           docker push ${{ secrets.ECR_URI }}:latest
 
       - name: Deploy to Kubernetes
-        uses: appleboy/k8s-action@master
+        uses: steebchen/kubectl@v2.0.0
         with:
-          kubeconfig: ${{ secrets.KUBECONFIG }}
-          manifests: |
-            k8s/deployment.yaml
-            k8s/service.yaml
+          config: ${{ secrets.KUBECONFIG }}
+          command: apply -f k8s/
