--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Flask CI/CD Pipeline
+name: build-and-deploy
 
 on:
   push:
@@ -6,36 +6,51 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted
+  build-deploy:
+    runs-on: self-hosted   # use your Windows self-hosted runner
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+      # 🔹 Make sure Docker is up and running
+      - name: Verify Docker
+        run: docker version
 
+      - name: Verify Minikube
+        run: kubectl get nodes
+
+      # 🔹 Build the Docker image
       - name: Build Docker image
-        run: docker build -t flask-app:latest .
+        run: |
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:latest .
 
+      # 🔹 Security scan (Trivy or similar)
       - name: Scan Docker image
-        run: docker scan flask-app:latest --accept-license || true
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:latest
 
+      # 🔹 Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # 🔹 Login to ECR
       - name: Login to AWS ECR
-        uses: aws-actions/amazon-ecr-login@v1
+        run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
-      - name: Tag and Push to ECR
+      # 🔹 Push to ECR
+      - name: Push Docker image
         run: |
-          docker tag flask-app:latest ${{ secrets.ECR_URI }}:latest
-          docker push ${{ secrets.ECR_URI }}:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:latest
 
-      - name: Deploy to Kubernetes
-        run: kubectl apply -f k8s/
+      # 🔹 Deploy to Minikube (local)
+      - name: Deploy to Kubernetes (Minikube)
+        run: |
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
+          kubectl rollout status deployment/flaskapp-deployment
