--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-name: flask-service
+  name: flask-service
 spec:
-type: NodePort
-selector:
-app: flask
-ports:
-- protocol: TCP
-port: 5000
-targetPort: 5000
-# nodePort: 30080 # optional: specify if you need a fixed node port
+  type: LoadBalancer
+  selector:
+    app: flask
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
